--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-development": "webpack --mode development --watch",
-    "build-production": "webpack --mode production",
+    "build:dev": "webpack --mode development --watch",
+    "build": "webpack --mode production",
     "start:dev": "webpack-dev-server",
     "start": "nodemon server"
   },
@@ -27,6 +27,8 @@
     "autoprefixer": "^9.7.1",
     "babel-loader": "^8.0.6",
     "bootstrap": "^4.3.1",
+    "brotli-webpack-plugin": "^1.1.0",
+    "compression-webpack-plugin": "^3.1.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.6.0",
     "file-loader": "^4.3.0",
@@ -50,6 +52,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-static-gzip": "^2.0.6",
     "jquery": "^3.5.0",
     "open": "^7.0.0"
   }
