--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-static-gzip": "^2.0.6",
     "jquery": "^3.5.1",
-    "open": "^7.0.4"
+    "open": "^7.0.4",
+    "sweetalert2": "^9.13.1"
   }
 }
